@@ -4,6 +4,13 @@ Major User visible changes in Buildbot.             -*- outline -*-
 
 
 * Next Version
+
+** Customizable validation regexps
+
+The global c['validation'] parameter can be used to adjust the regular
+expressions used to validate branches, revisions, and properties input by the
+user.
+
 ** Logging for SVNPoller cleaned up
 
 All logging for SVNPoller now starts with "SVNPoller: ". Previously it was
